--- a/laba_5/лаба 5.html
+++ b/laba_5/лаба 5.html
@@ -12,7 +12,7 @@
 <header>
     <h1>Изучаем flexbox</h1>
 </header>
-<div id="fl1">
+<div id="fl1_2_3">
     <article>
         <h2>1</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum quibusdam
@@ -36,7 +36,7 @@
     </article>
 </div>
 <div id="fl2">
-    <div id="fl3">
+    <div id="fl4_5_6">
         <article>
             <h2>4</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum
@@ -65,8 +65,8 @@
             </p>
         </article>
     </div>
-    <div id="fl4">
-        <div id="fl5">
+    <div id="fl7_8_9_10">
+        <div id="fl7_8">
             <article>
                 <h2>7</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum
@@ -86,7 +86,7 @@
                 </p>
             </article>
         </div>
-        <div id="fl6">
+        <div id="fl9_10">
             <article>
                 <h2>9</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, perspiciatis quo praesentium harum
